Fix double border in middle suggestions

--- a/replacer-frontend/src/app/article/edit-snippet.component.css
+++ b/replacer-frontend/src/app/article/edit-snippet.component.css
@@ -14,10 +14,12 @@
 
 @media (min-width: 576px) {
   .middle-suggestion {
+    border-right: none;
     border-radius: 0;
   }
 
   .first-suggestion {
+    border-right: none;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
   }
